fixed overlapping picture and id on smaller screens

--- a/Portfolio CSS.css
+++ b/Portfolio CSS.css
@@ -121,28 +121,34 @@ h2 {
 
 
 .id-card {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  height: 100%;
+  display: flex;
+  /* height: 100%; */
   align-items: center;
-  justify-items: center;
+  /* justify-items: center; */
   margin-top: 5rem;
   padding: 5rem;
   background: linear-gradient(to bottom, rgba(0,0,255,0), rgb(0, 0, 0));
 }
 
 .me {
-  height: 100%;
   width: 60%;
-  margin-left: 17rem;
-  justify-self: end;
+  margin-left: 17%;
+  /* justify-self: end; */
   border-radius: 25%;
   object-fit: cover;
   z-index: 5;
 }
 
-.blob1 {
+.blob-container{
+  position: relative;
+  width: 100%;
+}
+
+.blob {
   position: absolute;
+}
+
+.blob1 {
   background-color: goldenrod;
   border-radius: 150% 63% 99% 185% / 94% 85% 87% 100%;
   top: 12rem;
@@ -152,7 +158,6 @@ h2 {
 }
 
 .blob2 {
-  position: absolute;
   background-color: goldenrod;
   border-radius: 150% 123% 179% 85% / 84% 95% 97% 89%;
   top: 10rem;
@@ -163,7 +168,6 @@ h2 {
 }
 
 .blob3 {
-  position: absolute;
   background-color: white;
   border-radius: 150% 63% 99% 185% / 94% 85% 87% 100%;
   box-shadow: -2px -2px 10px #000000a8;
@@ -175,7 +179,6 @@ h2 {
 }
 
 .blob4 {
-  position: absolute;
   background-color: goldenrod;
   top: 50rem;
   left: 95rem;
@@ -186,7 +189,6 @@ h2 {
 }
 
 .blob5 {
-  position: absolute;
   background-color: black;
   top: 15rem;
   left: 83rem;
@@ -198,7 +200,6 @@ h2 {
 }
 
 .blob6 {
-  position: absolute;
   background-color: white;
   top: 40rem;
   left: 75rem;
@@ -210,7 +211,6 @@ h2 {
 }
 
 .blob7 {
-  position: absolute;
   background-color: black;
   border-radius: 150% 63% 99% 185% / 94% 85% 87% 100%;
   box-shadow: -2px -2px 10px #000000a8;
@@ -222,7 +222,6 @@ h2 {
 }
 
 .blob8 {
-  position: absolute;
   background-color: black;
   border-radius: 50%;
   top: 40rem;
@@ -233,7 +232,6 @@ h2 {
 }
 
 .blob9 {
-  position: absolute;
   background-color: goldenrod;
   border-radius: 150% 63% 99% 185% / 94% 85% 87% 100%;
   top: 10rem;
@@ -244,7 +242,6 @@ h2 {
 }
 
 .blob10 {
-  position: absolute;
   background-color: goldenrod;
   border-radius: 150% 123% 179% 85% / 84% 95% 97% 89%;
   top: 2rem;
@@ -255,7 +252,6 @@ h2 {
 }
 
 .blob11 {
-  position: absolute;
   background-color: white;
   border-radius: 150% 63% 99% 185% / 94% 85% 87% 100%;
   box-shadow: -2px -2px 10px #000000a8;
@@ -267,7 +263,6 @@ h2 {
 }
 
 .blob12 {
-  position: absolute;
   background-color: goldenrod;
   top: 28rem;
   left: 95rem;
@@ -278,7 +273,6 @@ h2 {
 }
 
 .blob13 {
-  position: absolute;
   background-color: black;
   top: 12rem;
   left: 83rem;
@@ -290,7 +284,6 @@ h2 {
 }
 
 .blob14 {
-  position: absolute;
   background-color: white;
   top: 20rem;
   left: 65rem;
@@ -302,7 +295,6 @@ h2 {
 }
 
 .blob15 {
-  position: absolute;
   background-color: black;
   border-radius: 150% 63% 99% 185% / 94% 85% 87% 100%;
   box-shadow: -2px -2px 10px #000000a8;
@@ -314,7 +306,6 @@ h2 {
 }
 
 .blob16 {
-  position: absolute;
   background-color: black;
   border-radius: 50%;
   top: 20rem;
@@ -346,10 +337,12 @@ h2 {
 }
 
 .explanation {
-  font-size: 2rem;
+  font-size: 3rem;
   color: goldenrod;
   padding-bottom: 1rem;
   font-weight: bold;
+  letter-spacing: 5px;
+  line-height: 4rem;
 }
 
 .icon {
